--- a/templates/job/edit.html.twig
+++ b/templates/job/edit.html.twig
@@ -3,11 +3,12 @@
 {% block title %}Edit Job{% endblock %}
 
 {% block body %}
-    <h1>Modifier les informations</h1>
+    <h1 class="mt-4 ml-2">Modifier les informations</h1>
+    <div class="container mt-5">
 
-    {{ include('job/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('job/_form.html.twig', {'button_label': 'Modifier'}) }}
+     {{ include('job/_delete_form.html.twig') }}
 
     <a href="{{ path('job_index') }}">back to list</a>
-
-    {{ include('job/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
