--- a/templates/job/new.html.twig
+++ b/templates/job/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Job{% endblock %}
 
 {% block body %}
-    <h1>Ajouter une candidature</h1>
+    <h1 class="ml-2 mt-4 mb-5">Ajouter une candidature</h1>
+<div class="container">
 
     {{ include('job/_form.html.twig') }}
 
-    <a href="{{ path('job_index') }}">back to list</a>
+    <a href="{{ path('job_index') }}">Retour à la liste des candidatures</a>
+</div>
 {% endblock %}
